# deaths-of-despair

./: .gitignore  CITATION.cff  CLAUDE.md  ESSAY_BRIEF.md  LICENSE  README.md  aian_decomp.py  alcohol_liver_county_2006_2012.csv  alcohol_liver_county_2013_2019.csv  altitude.py  altitude_threshold.py  analyze.py  bayes_independence.py  demographics.py  elevation_cache.json  export_web_data.py  export_web_figures.py  firearm_suicide_county_2018_2024.csv  gun_proxy.py  overdose_county_1999_2005.csv  overdose_county_2006_2012.csv  overdose_county_2013_2019.csv  pub_figures.py  pyproject.toml  spatial_regression.py  suicide_county_2006_2012.csv  suicide_county_2018_2024.csv  temporal.py  trajectory.py  y10_split.py
data/: alcohol_liver_county_1999_2005.csv  alcohol_liver_county_2018_2024.csv  overdose_county_2018_2024.csv  overdose_undetermined_county_2018_2024.csv  overdose_unintentional_county_2018_2024.csv  suicide_county_1999_2005.csv  suicide_county_2013_2019.csv
web/data/: bivariate_lisa.json  regimes.json  trajectory.json
