[project]
name = "deaths-of-despair"
version = "0.1.0"
description = "County-level spatial analysis of deaths of despair (suicide, overdose, alcoholic liver disease), 2018-2024"
requires-python = ">=3.12"
dependencies = [
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "libpysal>=4.14.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "spreg>=1.9.0",
]
